--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <h2>Others</h2>
     <a href="./Myhobbies.html">My Hobbies</a>
     <br>
-    <a href="Myhobbies copy.html">Contact Me</a>
+    <a href="./contact.html">Contact Me</a>
     <hr>
 </body>
 </html>
